--- a/src/main/resources/templates/authentication-login.html
+++ b/src/main/resources/templates/authentication-login.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Login | SeoDash</title>
-  <link rel="shortcut icon" type="image/png" href="../assets/images/logos/seodashlogo.png" />
+  <link rel="shortcut icon" type="image/png" href="../assets/images/logos/img_symbol_logo.png" />
   <link rel="stylesheet" th:href="@{/assets/css/styles.min.css}" />
 </head>
 
@@ -25,8 +25,8 @@
               <p class="text-center">Your Social Campaigns</p>
               <form th:action="@{/login}" method="post">
                 <div class="mb-3">
-                  <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email" name="email" required>
+                  <label for="employeeNumber" class="form-label">사번</label>
+                  <input type="text" class="form-control" id="employeeNumber" name="employeeNumber" required>
                 </div>
                 <div class="mb-4">
                   <label for="password" class="form-label">Password</label>
@@ -42,7 +42,7 @@
                 <button type="submit" class="btn btn-primary w-100 py-8 fs-4 mb-4">Sign In</button>
               </form>
               <div class="d-flex align-items-center justify-content-center">
-                <p class="fs-4 mb-0 fw-bold">New to SeoDash?</p>
+                <p class="fs-4 mb-0 fw-bold">계정생성</p>
                 <a class="text-primary fw-bold ms-2" th:href="@{/register}">Create an account</a>
               </div>
             </div>
