--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>롯데멤버스 인사시스템</title>
-  <link rel="shortcut icon" type="image/png" href="../assets/images/logos/img_symbol_logo.png" />
+  <link rel="shortcut icon" type="image/png" href="../assets/images/logos/img_symbol_logo.png.png" />
   <link rel="stylesheet" href="../assets/css/styles.min.css" />
 </head>
 
@@ -19,7 +19,7 @@
       <div>
         <div class="brand-logo d-flex align-items-center justify-content-between">
           <a href="./index.html" class="text-nowrap logo-img">
-            <img src="../assets/images/logos/img_symbol_logo.png" alt="" style="width: 50%; height: auto;" />
+            <img src="../assets/images/logos/img_symbol_logo.png.png" alt="" style="width: 50%; height: auto;" />
           </a>
 
           <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
