index.html modify

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -75,7 +75,7 @@
               <span class="hide-menu">급여</span>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="authentication-login.html" aria-expanded="false">
+              <a class="sidebar-link" href="http://localhost:8080/login" aria-expanded="false">
                 <span>
                   <iconify-icon icon="solar:login-3-bold-duotone" class="fs-6"></iconify-icon>
                 </span>
@@ -83,7 +83,7 @@
               </a>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="./authentication-register.html" aria-expanded="false">
+              <a class="sidebar-link" href="http://localhost:8080/register" aria-expanded="false">
                 <span>
                   <iconify-icon icon="solar:user-plus-rounded-bold-duotone fs-6" ></iconify-icon>
                 </span>
