--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,7 +79,7 @@
                 <span>
                   <iconify-icon icon="solar:login-3-bold-duotone" class="fs-6"></iconify-icon>
                 </span>
-                <span class="hide-menu">Login</span>
+                <span class="hide-menu">로그인</span>
               </a>
             </li>
             <li class="sidebar-item">
@@ -87,7 +87,7 @@
                 <span>
                   <iconify-icon icon="solar:user-plus-rounded-bold-duotone fs-6" ></iconify-icon>
                 </span>
-                <span class="hide-menu">Register</span>
+                <span class="hide-menu">회원가입</span>
               </a>
             </li>
           </ul>
